# SolarSim

./: CMakeLists.txt  README.md
glad/src/: glad.c
scripts/: fragment.glsl  geometry.glsl  kernel.cl  vertex.glsl
src/: Camera.cpp  Camera.h  Particle.cpp  Particle.h  ParticleSimulator.cpp  ParticleSimulator.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Window.cpp  Window.h  glad.h  main.cpp
